infra/main.tf
resource "azurerm_resource_group" "polyglot_rg" {
  name     = "polyglot-cloud-migration-v2-rg"
  location = var.location
}

resource "azurerm_virtual_network" "polyglot_vnet" {
  name                = "polyglot-vnet"
  address_space       = ["10.0.0.0/16"]
  location            = azurerm_resource_group.polyglot_rg.location
  resource_group_name = azurerm_resource_group.polyglot_rg.name
}

resource "azurerm_subnet" "public_subnet" {
  name                 = "polyglot-public-subnet"
  resource_group_name  = azurerm_resource_group.polyglot_rg.name
  virtual_network_name = azurerm_virtual_network.polyglot_vnet.name
  address_prefixes     = ["10.0.1.0/24"]
}

resource "azurerm_public_ip" "polyglot_pip" {
  name                = "polyglot-public-ip"
  location            = azurerm_resource_group.polyglot_rg.location
  resource_group_name = azurerm_resource_group.polyglot_rg.name
  allocation_method   = "Static"
  sku                 = "Standard"
}

resource "azurerm_network_security_group" "polyglot_nsg" {
  name                = "polyglot-nsg"
  location            = azurerm_resource_group.polyglot_rg.location
  resource_group_name = azurerm_resource_group.polyglot_rg.name

  security_rule {
    name                       = "SSH"
    priority                   = 1001
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "22"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "HTTP"
    priority                   = 1002
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "80"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }
}

resource "azurerm_network_interface" "polyglot_nic" {
  name                = "polyglot-nic"
  location            = azurerm_resource_group.polyglot_rg.location
  resource_group_name = azurerm_resource_group.polyglot_rg.name

  ip_configuration {
    name                          = "internal"
    subnet_id                     = azurerm_subnet.public_subnet.id
    private_ip_address_allocation = "Dynamic"
    public_ip_address_id          = azurerm_public_ip.polyglot_pip.id
  }
}

resource "azurerm_network_interface_security_group_association" "nsg_assoc" {
  network_interface_id      = azurerm_network_interface.polyglot_nic.id
  network_security_group_id = azurerm_network_security_group.polyglot_nsg.id
}

resource "azurerm_linux_virtual_machine" "web_server" {
  name                = "polyglot-vm"
  resource_group_name = azurerm_resource_group.polyglot_rg.name
  location            = azurerm_resource_group.polyglot_rg.location
  size                = var.vm_size
  admin_username      = "azureuser"

  network_interface_ids = [
    azurerm_network_interface.polyglot_nic.id,
  ]

  admin_password                  = "PolyglotCloudMigration2026!"
  disable_password_authentication = false

  os_disk {
    caching              = "ReadWrite"
    storage_account_type = "Standard_LRS"
  }

  source_image_reference {
    publisher = "Canonical"
    offer     = "0001-com-ubuntu-server-jammy"
    sku       = "22_04-lts"
    version   = "latest"
  }
}
